Closed
Bug 337841
Opened 19 years ago
Closed 19 years ago
rv checked uninitialized in XULSortServiceImpl::InsertContainerNode
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
RESOLVED
FIXED
People
(Reporter: ajschult784, Assigned: ajschult784)
References
()
Details
(Keywords: fixed1.8.1, regression, verified1.8.0.5)
Attachments
(1 file)
|
1.03 KB,
patch
|
neil
:
review+
neil
:
superreview+
bzbarsky
:
approval-branch-1.8.1+
dveditz
:
approval1.8.0.5+
|
Details | Diff | Splinter Review |
valgrind complains about "Conditional jump or move depends on uninitialised value(s)". The regression is from bug 329677
| Assignee | ||
Comment 1•19 years ago
|
||
Attachment #221909 -
Flags: superreview?(neil)
Attachment #221909 -
Flags: review?(neil)
Comment 2•19 years ago
|
||
Comment on attachment 221909 [details] [diff] [review]
set it first
D'oh!
Attachment #221909 -
Flags: superreview?(neil)
Attachment #221909 -
Flags: superreview+
Attachment #221909 -
Flags: review?(neil)
Attachment #221909 -
Flags: review+
| Assignee | ||
Comment 3•19 years ago
|
||
fixed
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 4•19 years ago
|
||
We need this on the branches too. Bug 329677 landed in 1.8.0.4 and 1.8.1. "rv" is not uninitialized there, but it's definitely not being set from the GetUnicodeResource call....
Comment 5•19 years ago
|
||
Comment on attachment 221909 [details] [diff] [review]
set it first
a=me for the 1.8 branch. Drivers, this is a regression from a patch we took in 1.8.0.4 that could lead to crashes as far as I can tell... So we probably want to take this in 1.8.0.4 if there's any way to do that. If not, we should definitely take this in 1.8.0.5. The patch is very very safe.
Attachment #221909 -
Flags: approval1.8.0.5?
Attachment #221909 -
Flags: approval1.8.0.4?
Attachment #221909 -
Flags: approval-branch-1.8.1+
Comment 6•19 years ago
|
||
We'll take it for 1.8.0.4 if we're respinning, otherwise 1.8.0.5 -- leaving in nominated limbo for now.
Flags: blocking1.8.1? → blocking1.8.1+
| Assignee | ||
Updated•19 years ago
|
Keywords: fixed1.8.1
Comment 7•19 years ago
|
||
Comment on attachment 221909 [details] [diff] [review]
set it first
not respinning 1.8.0.4
Attachment #221909 -
Flags: approval1.8.0.4?
Updated•19 years ago
|
Flags: blocking1.8.0.5?
Flags: blocking1.8.0.5+
Flags: blocking1.8.0.4?
Comment 8•19 years ago
|
||
Comment on attachment 221909 [details] [diff] [review]
set it first
approved for 1.8.0 branch, a=dveditz for drivers
Attachment #221909 -
Flags: approval1.8.0.5? → approval1.8.0.5+
Comment 10•19 years ago
|
||
v.fixed on 1.8.0 branch by code inspection.
Keywords: fixed1.8.0.5 → verified1.8.0.5
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•