Bug 337841: rv checked uninitialized in XULSortServiceImpl::InsertContainerNode. r+sr=Neil